--- a/HelloToast/app/src/main/res/layout/activity_launcher_splash_logo.xml
+++ b/HelloToast/app/src/main/res/layout/activity_launcher_splash_logo.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FDFDFC"
+    android:background="#f3eae8"
     tools:content=".MainLauncherSplashLogo">
 
     <LinearLayout
@@ -18,7 +18,7 @@
             android:layout_width="350dp"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
-            android:src="@drawable/th" />
+            android:src="@drawable/logo" />
 
     </LinearLayout>
 
